backgrounds and grid centered

--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 centered">
-          <img src="https://cdn.bulbagarden.net/upload/thumb/d/d7/448Lucario.png/250px-448Lucario.png">
-          Lucario
+          <img src="https://cdn.bulbagarden.net/upload/thumb/d/d7/448Lucario.png/250px-448Lucario.png"
+          class="blue">
+        <p class="img-dsc">  Lucari </p>
         </div>
-        <div class="col-lg-4 centered"><img src="https://cdn.bulbagarden.net/upload/thumb/c/c6/094Gengar.png/250px-094Gengar.png">
-          Gengar
+        <div class="col-lg-4 centered">
+          <img src="https://cdn.bulbagarden.net/upload/thumb/c/c6/094Gengar.png/250px-094Gengar.png"
+          class="img-thumbnail purple">
+        <p class="img-dsc">  Gengar </p>
         </div>
-        <div class="col-lg-4 centered"><img src="https://cdn.bulbagarden.net/upload/5/55/212Scizor.png">
-        Scizor
+        <div class="col-lg-4 centered">
+          <img src="https://cdn.bulbagarden.net/upload/5/55/212Scizor.png"
+          class="red">
+      <p class="img-dsc">  Scizor </p>
         </div>
       </div>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
