added some stuff

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
     <link rel="stylesheet" href="main.css">
+    <script src="https://unpkg.com/typewriter-effect/dist/core.js"></script>
     <title>Pokemon Project</title>
   </head>
   <body>
@@ -44,30 +45,31 @@
 
        <!-- INPUTING PIC AND STATS -->
        <div class="modal-body">
+
            <div class="container2">
              <div class="row">
 
-               <div class="col-lg-6">
+               <div class="col-lg-6" id="glass">
                  <img src="" id="sprite">
                </div>
 
                <div class="col-lg-6" id="stats">
-                 <span class="bold">Name: </span>
+                 <span class="bold">Name:</span>
                  <span id="pokeName"></span>
                  <br>
-                 <span class="bold">Attack: </span>
+                 <span class="bold">Attack:</span>
                  <span id="pokeAttack"></span>
                  <br>
-                 <span class="bold">Defense: </span>
+                 <span class="bold">Defense:</span>
                  <span id="pokeDefense"></span>
                  <br>
-                 <span class="bold">Ability1: </span>
+                 <span class="bold">Ability1:</span>
                  <span id="pokeAbility1"></span>
                  <br>
-                 <span class="bold">Ability2: </span>
+                 <span class="bold">Ability2:</span>
                  <span id="pokeAbility2"></span>
                  <br>
-                 <span class="bold">Ability3: </span>
+                 <span class="bold">Ability3:</span>
                  <span id="pokeAbility3"></span>
 
                </div>
